Fix spacing on masthead

--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -54,5 +54,10 @@
 
     .spacer {
         margin-top: 16rem;
+        line-height: 8rem;
+    }
+
+    .my-0 {
+        padding-bottom: 40px;
     }
 }
